--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+	--default-green: #1db954;
+	--light-green: #1ed760;
+}
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,7 +15,7 @@ body {
 }
 
 .btn-primary {
-    background-color: #1DB954;
+    background-color: var(--default-green);
     color: white;
     text-transform: uppercase;
     padding: 15px 60px;
@@ -17,12 +23,24 @@ body {
     border-radius: 30px;
     letter-spacing: 1px;
     font-weight: bold;
+    transition: all 300ms ease;
+}
+
+.btn-primary:hover {
+	background: var(--light-green);
+	cursor: pointer;
 }
 
 .logo {
     height: 40px;
     width: auto;
 }
+
+.logo:hover {
+    color: #1DB954;
+    cursor: pointer;
+}
+    
 
 #navbar{
     display: flex;
@@ -49,6 +67,12 @@ body {
 
 #navbar .navbar-container ul li {
     padding:  0 20px;
+    transition: all 300ms ease;
+}
+
+#navbar .navbar-container ul li:hover {
+    color: #1DB954;
+    cursor: pointer;
 }
 
 #navbar .navbar-container ul li:nth-child(3) {
@@ -61,7 +85,7 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
-    background: url("/img/showcase.webp") center center/cover;
+    background: url("/img/723262.gif") center center/cover;
     background-color: rgba(0,0,0,0.4);
     background-blend-mode: color;
 }
@@ -81,3 +105,104 @@ body {
     margin: 15px 0;
     font-size: 1.1rem;
 }
+
+#footer{
+    background-color:black;
+    color: white;
+    padding: 80px 0;
+}
+
+#footer .footer-content {
+    display: flex;
+    width: 60%;
+    margin: auto;
+    justify-content: space-between;
+}
+
+#footer .footer-content .footer-menu{
+    margin: 0 60px;
+    list-style: none;
+}
+
+#footer .footer-content .footer-menu .footer-menu-item{
+    margin: 25px 0;
+    transition: all 300ms ease;
+}
+
+#footer .footer-content .footer-menu .footer-menu-item:hover{
+    color: #1DB954;
+    cursor: pointer;
+}
+
+#footer .footer-content .footer-menu .footer-menu-item:hover{
+    color: var(--default green);
+    cursor: pointer;
+}
+
+#footer .footer-content .footer-menu p {
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #919496;
+    font-size: 0.8rem;
+}
+
+.socials {
+    display: flex;
+
+}
+
+.socials i{
+    margin: 0 20px;
+    font-size: 1.3rem;
+    transition: all 300ms ease;
+}
+
+.socials i:hover{
+    color: var(--default-green);
+    cursor: pointer;
+}
+
+.footer-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 60%;
+    margin: auto;
+    font-weight: bold;
+    color: #919496;
+    font-size: 0.75rem;
+    padding-top: 30px;
+}
+
+.footer-info .footer-info-items{
+    display: flex;
+    list-style: none;
+}
+
+.footer-info .footer-info-items .footer-info-item{
+    margin: 0 10px;
+    font-weight: bold;
+    color: #919496;
+    font-size: 0.75rem;
+    transition: all 300ms ease;
+}
+
+.footer-info .footer-info-items .footer-info-item:hover{
+    color: #1DB954;
+    cursor: pointer;
+}
+
+.footer-info .rights .country{
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+    align-items: center;
+}
+
+.footer-info .rights .country .brazil-flag{
+    height: 15px;
+    width: auto;
+    display: inline-block;
+    margin-left: 10px;
+}
+
