--- a/login.css
+++ b/login.css
@@ -1,53 +1,79 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+  background: url("./img/bg.png");
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-family: "Nirmala UI", Arial, serif;
 }
 
 .container {
-    background-color: white;
-    padding: 100px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
+  background-color: white;
+  padding: 20px 50px;
+  border-radius: 15px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 400px;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .input-group {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 label {
-    display: block;
-    margin-bottom: 5px;
+  display: block;
+  margin-bottom: 5px;
 }
 
-input[type="text"],
-input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+input {
+  width: 95%;
+  height: 35px;
+  padding-left: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background: #fff;
 }
 
 button {
-    width: 100%;
-    padding: 10px;
-    background-color: #fa66b8;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  background: deeppink;
+  outline: 0;
+  border: 0;
+  border-radius: 10px;
+  width: 100%;
+  height: 50px;
+  cursor: pointer;
+  font-size: 20px;
+  letter-spacing: 2px;
+  font-weight: 600;
+  color: #440727;
+  transition: 100ms ease;
 }
 
-
 button:hover {
-    background-color: #fa66b8;
+  background-color: #c02f7c;
+  transition: 100ms ease;
+}
+
+.hidden {
+  visibility: visible !important;
+}
+
+.erro-login {
+  visibility: hidden;
+}
+
+.hasAccount {
+  text-align: center;
+  margin: auto;
+  display: block;
+  width: 100% !important;
+  margin-top: 15px;
+  text-decoration: none;
+  color: deeppink;
 }
